# push-price-customer

./: .gitignore  README.md  pyproject.toml  pyproject.toml.broken.1757547966  sample_test_data.csv  sample_train_data.csv
apps/: generate_sample_data.py  push_ate_analysis.py  run_ate_analysis.py  run_ate_estimation.py
customer_analysis/segmentation/: advanced_clustering.py  advanced_eda.py  data_generator.py  preprocessing_pipeline.py
customer_analysis/segmentation/data/: clustering_evaluation.csv  customer_master.csv  preprocessing_metadata.json  processed_features.csv  purchase_data.csv  rfm_features.csv
customer_axis/uplift_modeling/: data_generator.py.bak
data/customer/samples/: customer_attributes.parquet  metadata.json  product_master.parquet  true_customer_factors.npy  true_product_factors.npy
data/synthetic/: generate_sample_data.py  tdf_v1.parquet  transactions.parquet
data/synthetic/data/synthetic/: customers.parquet  push_logs.parquet
libs/causal/: dr_ate.py
results/dimension_reduction/: analysis_summary_20250919_120004.md  analysis_summary_20250919_120729.md  dimension_reduction_analysis_20250919_120004.json  dimension_reduction_analysis_20250919_120729.json
scripts/: run_dr_ate.py
src/customer/dimension_reduction/core/: dimension_reduction_analyzer.py
src/customer/dimension_reduction/utils/: sample_data_generator.py  visualization.py
src/push_axis/cate/learners/: dr_learner.py  r_learner.py  x_learner.py
src/stage1/: diagnostics.py  ess_fallback.py  ipw_estimator.py  ipw_stabilized.py
(+4 files in other folders)
