[project]
name = "push-price-customer"
version = "0.1.0"
description = "因果推論による配信・価格施策最適化"
authors = [
    {name = "dera923"}
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "psutil (>=7.1.0,<8.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "kaleido (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
types-requests = "^2.32.4.20250809"

